--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
   <title>Delícias Mineira</title>
   <link rel="stylesheet" href="style.css">
 
-  <!-- Open Graph (para preview em redes sociais e WhatsApp) -->
-  <meta property="og:title" content="Delícias Mineira - Sabor que cativa!">
-  <meta property="og:description" content="Comida caseira feita com carinho, o teu sabor mineiro!">
-  <meta property="og:image" content="https://seudominio.com/imagens/mineiro2.png"> <!-- Substitua pela URL pública da sua imagem -->
-  <meta property="og:url" content="https://seudominio.com"> <!-- Substitua pelo seu link final -->
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Delícias Mineira"
+<!-- Open Graph (WhatsApp, Facebook etc.) -->
+<meta property="og:title" content="Delícias Mineira - Sabor que cativa!" />
+<meta property="og:description" content="Comida caseira feita com carinho, o teu sabor mineiro" />
+<meta property="og:image" content="https://deliciasmineira.netlify.app/mineiro2.png />
+<meta property="og:url" content="https://deliciasmineira.netlify.app/" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Delícias Mineira" />
+
+  
+
+
+
+
 </head>
 <body>
   <div class="container">
