--- a/index.html
+++ b/index.html
@@ -5,33 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Delícias Mineira</title>
   <link rel="stylesheet" href="style.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Delícias Mineira</title>
-  <link rel="stylesheet" href="style.css">
 
-<!-- Open Graph (WhatsApp, Facebook etc.) -->
-<meta property="og:title" content="Delícias Mineira - Sabor que cativa!" />
-<meta property="og:description" content="Comida caseira feita com carinho, o teu sabor mineiro" />
-<meta property="og:image" content="https://deliciasmineira.netlify.app/mineiro2.png />
-<meta property="og:url" content="https://deliciasmineira.netlify.app/" />
-<meta property="og:type" content="website" />
-<meta property="og:site_name" content="Delícias Mineira" />
-
-  
-
-
-
-
+  <!-- Open Graph (WhatsApp, Facebook etc.) -->
+  <meta property="og:title" content="Delícias Mineira - Sabor que cativa!" />
+  <meta property="og:description" content="Comida caseira feita com carinho, o teu sabor mineiro" />
+  <meta property="og:image" content="https://deliciasmineira.netlify.app/mineiro2.png" />
+  <meta property="og:url" content="https://deliciasmineira.netlify.app/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Delícias Mineira" />
 </head>
+
 <body>
   <div class="container">
-    <img src="mineiro2.png" alt="Delícias Mineira" class="logo">
+    <img src="mineiro2.png" alt="Logo Delícias Mineira" class="logo">
     <h1>Bem-vindo à Delícias Mineira</h1>
 
     <div class="buttons">
-      <a href="https://wa.me/5531992168680" target="_blank" class="btn">Fale Conosco (WhatsApp)</a>
-      <a href="https://www.instagram.com/delicias_mineira31?igsh=MTZwc3k3b3hwMzFmZw==" target="_blank" class="btn">Nosso Instagram</a>
+      <a href="https://wa.me/5531992168680" target="_blank" rel="noopener noreferrer" class="btn">
+        Fale Conosco (WhatsApp)
+      </a>
+      <a href="https://www.instagram.com/delicias_mineira31?igsh=MTZwc3k3b3hwMzFmZw==" target="_blank" rel="noopener noreferrer" class="btn">
+        Nosso Instagram
+      </a>
     </div>
 
     <footer>
