--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="buttons">
       <a href="https://wa.me/5531992168680" target="_blank" rel="noopener noreferrer" class="btn">
-        Fale Conosco (WhatsApp)
+        Faça seu pedido (WhatsApp)
       </a>
       <a href="https://www.instagram.com/delicias_mineira31?igsh=MTZwc3k3b3hwMzFmZw==" target="_blank" rel="noopener noreferrer" class="btn">
         Nosso Instagram
